Boolean.valueOf() is more efficient than new Boolean()
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/dbutils/trunk@755385 13f79535-47bb-0310-9956-ffa450edef68