@@ -313,7 +313,7 @@ public class MockResultSet implements InvocationHandler {
             return "MockResultSet " + System.identityHashCode(proxy);
 
         } else if (methodName.equals("equals")) { 
-            return new Boolean(proxy == args[0]); 
+            return Boolean.valueOf(proxy == args[0]); 
         }
 
         throw new UnsupportedOperationException("Unsupported method: " + methodName);
